ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <formula>ResidentialLoanApplication__r.ApplicationId__c</formula>
    <label>ApplicationId</label>
    <type>Text</type>
</CustomField>