ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/brokerTrailCommission__c.field-meta.xml
<CustomField>
    <fullName>brokerTrailCommission__c</fullName>
    <label>Broker Trail Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>