ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/BrokerUpfrontCommission__c.field-meta.xml
<CustomField>
    <fullName>BrokerUpfrontCommission__c</fullName>
    <label>Broker Upfront Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>