ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/ContributingAmount__c.field-meta.xml
<CustomField>
    <fullName>ContributingAmount__c</fullName>
    <label>Contributing Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>