ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/estimatedLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>estimatedLoanAmount__c</fullName>
    <label>Estimated Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>