ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/extraRepayments__c.field-meta.xml
<CustomField>
    <fullName>extraRepayments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Repayments</label>
    <type>Checkbox</type>
</CustomField>