ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/institution__c.field-meta.xml
<CustomField>
    <fullName>institution__c</fullName>
    <label>Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditInstitutions</valueSetName>
    </valueSet>
</CustomField>