ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/InterestOnlyPeriod__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyPeriod__c</fullName>
    <label>Interest Only Period</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>