ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/InterestRateTypes__c.field-meta.xml
<CustomField>
    <fullName>InterestRateTypes__c</fullName>
    <label>Interest Rate Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>