ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/isElectronicTransaction__c.field-meta.xml
<CustomField>
    <fullName>isElectronicTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Electronic Transaction</label>
    <type>Checkbox</type>
</CustomField>