ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/limit__c.field-meta.xml
<CustomField>
    <fullName>limit__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>