ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanAmount__c.field-meta.xml
<CustomField>
    <fullName>loanAmount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>