ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanPurchaseReasonOther__c.field-meta.xml
<CustomField>
    <fullName>loanPurchaseReasonOther__c</fullName>
    <label>Loan Purchase Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>