ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/LoanPurposeCal__c.field-meta.xml
<CustomField>
    <fullName>LoanPurposeCal__c</fullName>
    <formula>CASE(TEXT(loanPurchaseReason__c),
&quot;790&quot;,&quot;owner occupied&quot;,&quot;791&quot;,&quot;investment&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Purpose</label>
    <type>Text</type>
</CustomField>