ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanPurposeOther__c.field-meta.xml
<CustomField>
    <fullName>loanPurposeOther__c</fullName>
    <label>Loan Purpose Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>