ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanRefinanceReason__c.field-meta.xml
<CustomField>
    <fullName>loanRefinanceReason__c</fullName>
    <label>Loan Refinance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanRefinanceReason</valueSetName>
    </valueSet>
</CustomField>