ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanRefinanceReasonOther__c.field-meta.xml
<CustomField>
    <fullName>loanRefinanceReasonOther__c</fullName>
    <label>Loan Refinance Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>