ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/LoanTerminYears__c.field-meta.xml
<CustomField>
    <fullName>LoanTerminYears__c</fullName>
    <label>Loan Term in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>