ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/loanType__c.field-meta.xml
<CustomField>
    <fullName>loanType__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanTypes</valueSetName>
    </valueSet>
</CustomField>