ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/lvr__c.field-meta.xml
<CustomField>
    <fullName>lvr__c</fullName>
    <label>LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>