ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/lvrPreLmi__c.field-meta.xml
<CustomField>
    <fullName>lvrPreLmi__c</fullName>
    <label>Lvr Pre Lmi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>