ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/maxLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>maxLoanAmount__c</fullName>
    <label>Max Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>