ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/maxLoanAmountReason__c.field-meta.xml
<CustomField>
    <fullName>maxLoanAmountReason__c</fullName>
    <label>Max Loan Amount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>