ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/maxLVRwithoutLMI__c.field-meta.xml
<CustomField>
    <fullName>maxLVRwithoutLMI__c</fullName>
    <label>Max LVR without LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>