ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/minContributionsNoLmi__c.field-meta.xml
<CustomField>
    <fullName>minContributionsNoLmi__c</fullName>
    <label>Min Contributions No Lmi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>