ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offset</label>
    <type>Checkbox</type>
</CustomField>