ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/OffsetAccount__c.field-meta.xml
<CustomField>
    <fullName>OffsetAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offset Account</label>
    <type>Checkbox</type>
</CustomField>