ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/proposeRepaying__c.field-meta.xml
<CustomField>
    <fullName>proposeRepaying__c</fullName>
    <label>Propose Repaying</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PostRetirementRepaymentPlan</valueSetName>
    </valueSet>
</CustomField>