ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/proposeRepayingOther__c.field-meta.xml
<CustomField>
    <fullName>proposeRepayingOther__c</fullName>
    <label>Propose Repaying Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>