ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/ReasonsforInterestOnly__c.field-meta.xml
<CustomField>
    <fullName>ReasonsforInterestOnly__c</fullName>
    <label>Reasons for Interest Only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodate temporary reduction in income</fullName>
            </value>
            <value>
                <fullName
        >Accommodate anticipated large non-recurring expenses</fullName>
                <label
        >Accommodate anticipated large non-recurring expenses</label>
            </value>
            <value>
                <fullName
        >Accommodate variable and unpredictable income</fullName>
                <label>Accommodate variable and unpredictable income</label>
            </value>
            <value>
                <fullName>Create funds for investment purposes</fullName>
            </value>
            <value>
                <fullName>Taxation, financial or accounting reasons</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>