ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/repaymentsFixedRateReasons__c.field-meta.xml
<CustomField>
    <fullName>repaymentsFixedRateReasons__c</fullName>
    <label>Repayments Fixed Rate Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepaymentsFixedRateReasons</valueSetName>
    </valueSet>
</CustomField>