ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/repaymentsFixedRateReasonsOther__c.field-meta.xml
<CustomField>
    <fullName>repaymentsFixedRateReasonsOther__c</fullName>
    <label>Repayments Fixed Rate Reasons Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>