ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/repaymentsInterestOnlyReasonOther__c.field-meta.xml
<CustomField>
    <fullName>repaymentsInterestOnlyReasonOther__c</fullName>
    <label>Repayments Interest Only Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>