ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/repaymentsInterestOnlyReasons__c.field-meta.xml
<CustomField>
    <fullName>repaymentsInterestOnlyReasons__c</fullName>
    <label>Repayments Interest Only Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepaymentsInterestOnlyReasons</valueSetName>
    </valueSet>
</CustomField>