ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>