ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/SourceofContribution__c.field-meta.xml
<CustomField>
    <fullName>SourceofContribution__c</fullName>
    <label>Source of Contribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContributionsSourceOfFunds</valueSetName>
    </valueSet>
</CustomField>