ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>