ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/testGloblaPicklist__c.field-meta.xml
<CustomField>
    <fullName>testGloblaPicklist__c</fullName>
    <label>testGloblaPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetTypes</valueSetName>
    </valueSet>
</CustomField>