ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/TotalConsolidatedDebts__c.field-meta.xml
<CustomField>
    <fullName>TotalConsolidatedDebts__c</fullName>
    <label>Total Consolidated Debts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>