ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/totalContributions__c.field-meta.xml
<CustomField>
    <fullName>totalContributions__c</fullName>
    <label>Total Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>