ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/TotalMonthlyRepayment__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyRepayment__c</fullName>
    <label>Total Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>