ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/totalMonthlyServiceabilityRepayments__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyServiceabilityRepayments__c</fullName>
    <label>Total Monthly Serviceability Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>