ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/TotalOutstandingBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstandingBalance__c</fullName>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>