ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/TotalPurchaseCosts__c.field-meta.xml
<CustomField>
    <fullName>TotalPurchaseCosts__c</fullName>
    <label>Total Purchase Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>