ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/totalSecurityValue__c.field-meta.xml
<CustomField>
    <fullName>totalSecurityValue__c</fullName>
    <label>Total Security Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>