ctm-sf-homeloan-app/main/default/objects/Loan__c/fields/useSavingsToReduceInterestCharged__c.field-meta.xml
<CustomField>
    <fullName>useSavingsToReduceInterestCharged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Savings To Reduce Interest Charged</label>
    <type>Checkbox</type>
</CustomField>